deploy/k8s/manifests/kafka-ui/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kafka-ui
  labels:
    app.kubernetes.io/name: kafka-ui
