deploy/k8s/manifests/kafka-ui/04-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka-ui
  namespace: kafka-ui
  labels:
    app.kubernetes.io/name: kafka-ui
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: KAFKAUI_AFFINITY
    nginx.ingress.kubernetes.io/session-cookie-hash: sha1
spec:
  ingressClassName: nginx
  rules:
    - host: kafka-ui.eisnot.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kafka-ui
                port:
                  name: http
  # tls:
  #   - hosts:
  #       - kafka-ui.eisnot.ru
  #     secretName: kafka-ui-tls
